# plasma-workspace

./: CMakeLists.txt  ConfigureChecks.cmake
applets/appmenu/lib/: appmenuapplet.cpp
applets/appmenu/plugin/: appmenumodel.cpp
applets/mediacontroller/contents/ui/: ExpandedRepresentation.qml  main.qml
applets/systemtray/package/contents/ui/: CurrentItemHighLight.qml  ExpandedRepresentation.qml  ExpanderArrow.qml  HiddenItemsView.qml  SystemTrayState.qml  main.qml
applets/systemtray/package/contents/ui/items/: AbstractItem.qml  PlasmoidItem.qml  StatusNotifierItem.qml
dataengines/mouse/: CMakeLists.txt
kcms/colors/: CMakeLists.txt  colorsapplicator.cpp
kcms/cursortheme/: CMakeLists.txt  kcmcursortheme.cpp  kcmcursortheme.h
kcms/cursortheme/package/contents/ui/: main.qml
kcms/fonts/: CMakeLists.txt
kcms/formats/: CMakeLists.txt  formatssettings.kcfg  kcmformats.cpp  kcmformats.h  languagelistmodel.cpp  languagelistmodel.h  localelistmodel.cpp  optionsmodel.cpp  optionsmodel.h
kcms/formats/package/contents/ui/: AdvancedLanguageSelectPage.qml  LanguageSelectPage.qml  main.qml
kcms/lookandfeel/: CMakeLists.txt  kcm.cpp  kcm.h  lnftool.cpp  lookandfeelmanager.cpp  lookandfeelmanager.h  lookandfeelsettings.kcfgc
kcms/lookandfeel/autotests/: kcmtest.cpp
kcms/style/: gtkthemesmodel.h  kcmstyle.cpp
kcms/style/package/contents/ui/: GtkStylePage.qml
klipper/: CMakeLists.txt
libkworkspace/: CMakeLists.txt
libtaskmanager/: CMakeLists.txt
runners/helprunner/: CMakeLists.txt  helprunner.desktop
runners/webshortcuts/: webshortcutrunner.cpp
shell/: panelview.cpp  shellcorona.cpp
startkde/: CMakeLists.txt  startplasma-wayland.cpp  startplasma.cpp
startkde/plasma-session/: startup.cpp
